--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,8 @@ h2, h3 {
   font-weight: lighter;
   margin-bottom: 10px;
   color: var(--text);
+  margin-top: 0px;
+  line-height: 20px;
 }
 
 input[type="date"]{
@@ -59,4 +61,15 @@ input[type="date"]:focus{
   border-color: var(--accent);
   background-color: var(--card);
   transition: 300ms;
+}
+
+@media screen and (max-width: 500px){
+  .card{
+    width: 80vw;
+    background: none;
+    padding: 20px;
+  }
+  input[type="date"]{
+    width: 80vw;
+  }
 }
